
Fri Nov 03 04:37:56 1995   Chris Provenzano (proven@mit.edu)

        * adm.h : Constant changes for the new kadmin code.
	* kdb.h : Added attribute bit KRB5_KDB_NEW_PRINC. This will 
		allow kadmin administrators with add acls to modify a
		principal until this bit is cleared. 

Fri Oct  6 21:58:05 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Thu Oct  5 21:33:27 1995  Theodore Y. Ts'o  <tytso@dcl>

	* adm.h: Remove pport and sport from the krb5_realm_params file,
		and replace it with ports, which is a char * list of all
		of the ports which should be listed to for this realm.

Fri Sep 29 14:37:41 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (clean-unix): Remove autoconf.h on make clean

Wed Sep 27 16:00:00 1995  John Rivlin <jrivlin@fusion.com>

	* adm_proto.h: Removed use of prototypes using krb5_db_entry
		on the Macintosh. 

Tue Sep 26 15:36:20 1995    <tytso@rsts-11.mit.edu>

	* kdb.h, kdb_dbm.h: Add #if !defined(_MSDOS) &&
		!defined(_MACINTOSH) to prevent these #includes from being
		used by Mac and PC machines.

Mon Sep 25 16:39:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Thu Sep 20 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* macsock.h:  Changes to support TCP streams and change password.

Thu Sep  8 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* k5-config.h:  defined MPW fake stat.h out for metrowerks compiler
	* macsock.h:  changed SOCKET definition for MACINTOSH to start support for
		TCP streams
	* TCPBP.h:  fixed up some prototype problems with out customized tcp sockets
		for macintosh

Thu Sep  7 15:53:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* adm.h (KRB5_ADM_SERVICE_NAME): Use official IANA assigned name
		for the port, which is kpasswd, not changepw.  Add new
		define, KRB5_ADM_SERVICE_INSTANCE, which defines the
		instance name used for the kadmin name.
